finalized MMO notebooks and associated files

--- a/notebooks/7.1-mmo_voting.ipynb
+++ b/notebooks/7.1-mmo_voting.ipynb
@@ -16,7 +16,7 @@
     "## README\n",
     "Ce notebook permet la création et l'évaluation de modèles de voting.\n",
     "\n",
-    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Il réalise tout d'abord certaines opérations préalables (chapitre 1)\n",
     "\n",
     "Le chapitre 2 crée et évalue un modèle de voting simple, par moyennage des prédictions de 2 modèles (1 images et 1 texte)\n",
     "\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d44804c6-78ae-482f-84c6-f6a741e8bd85",
+   "id": "3d2671d2-6c40-47d2-b044-d1011cfdbd54",
    "metadata": {},
    "source": [
     "## 1. Préparation"
@@ -45,7 +45,7 @@
     "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
     "    sys.path.append(str(project_root))\n",
     "\n",
-    "from src import PATHS"
+    "from src import PATHS, LABELS"
    ]
   },
   {
@@ -58,6 +58,7 @@
     "import os\n",
     "import time\n",
     "import pickle\n",
+    "import joblib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -65,50 +66,15 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "\n",
-    "from src.models.multimodal import MultiModalVoter, MultiModalClassWeightedVoter, MultiModalLogisticRegressor\n",
     "from src.visualization.visualize import visual_classification_report"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8697f72-68e1-4ac8-a304-049643520506",
+   "id": "cbd19944-0cbf-47e0-8ae6-61053099be62",
    "metadata": {},
    "source": [
     "## 2. Chargement des données"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78566542-9924-4aac-9d25-a15d13d65327",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_features = pd.read_parquet(os.path.join(PATHS.processed_data, 'df_txt_ocr1.parquet'))\n",
-    "text_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1a5840f-12a5-4c7d-bd31-8e1191c5b151",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_features = pd.read_parquet(os.path.join(PATHS.processed_data, \"df_img_features_flattened.parquet\"))\n",
-    "image_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be93acf6-dbd8-4c3d-b125-88d78e753be4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = text_features.join(image_features, how=\"inner\")\n",
-    "del image_features, text_features\n",
-    "features.shape"
    ]
   },
   {
@@ -118,40 +84,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sets = pd.read_parquet(os.path.join(PATHS.metadata, \"df_data_sets.parquet\"))\n",
-    "labels = pd.read_parquet(os.path.join(PATHS.metadata, \"df_encoded_labels.parquet\"))"
+    "documents = pd.read_parquet(PATHS.metadata / \"df_data_sets.parquet\")\n",
+    "data_sets = pd.read_parquet(PATHS.metadata / \"df_data_sets.parquet\")\n",
+    "labels = pd.read_parquet(PATHS.metadata / \"df_encoded_labels.parquet\")"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "2bd8390c-3906-4d44-9ce7-693d6dccd7cb",
+   "id": "1f9029e9-c084-4bc6-875f-63459f3520e9",
    "metadata": {},
    "source": [
-    "## pour ne travailler que sur un échantillon :"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "50d52c28-8bcd-4420-bad2-a06332de29bc",
-   "metadata": {},
-   "source": [
-    "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_4k_3.parquet'))\n",
-    "features = features.join(sample, how='inner')\n",
-    "features.shape"
+    "# pour ne travailler que sur un échantillon\n",
+    "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_40k_2.parquet'))\n",
+    "documents = sample.join(documents)\n",
+    "labels = sample.join(labels)\n",
+    "data_sets = sample.join(data_sets)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d481163a-41ba-4b54-84be-1d04a93cb8a5",
+   "id": "79f65ef1-1be3-48a2-97f3-2e182c26dbb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# au cas où features soit incomplet\n",
-    "data_sets = data_sets.join(features[[]], how=\"inner\")\n",
-    "labels = labels.join(features[[]], how=\"inner\")\n",
-    "\n",
-    "features.shape, data_sets.shape, labels.shape"
+    "documents.shape, data_sets.shape, labels.shape"
    ]
   },
   {
@@ -161,71 +118,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = features[data_sets.data_set == \"train\"]\n",
-    "y_train = labels[data_sets.data_set == \"train\"]\n",
+    "X_train = documents[data_sets.data_set == \"train\"].index\n",
+    "y_train = labels[data_sets.data_set == \"train\"].label\n",
     "\n",
-    "X_val = features[data_sets.data_set == \"val\"]\n",
-    "y_val = labels[data_sets.data_set == \"val\"]\n",
+    "X_val = documents[data_sets.data_set == \"val\"].index\n",
+    "y_val = labels[data_sets.data_set == \"val\"].label\n",
     "\n",
-    "X_test = features[data_sets.data_set == \"test\"]\n",
-    "y_test = labels[data_sets.data_set == \"test\"]\n",
-    "\n",
-    "del features, labels, data_sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b3a086f-60ba-4464-af69-f643af6b85b8",
-   "metadata": {},
-   "source": [
-    "## 3. Chargement des pipelines"
+    "X_test = documents[data_sets.data_set == \"test\"].index\n",
+    "y_test = labels[data_sets.data_set == \"test\"].label"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaddc94d-2f41-4ed9-8112-c3f40cabe819",
+   "id": "7cf86ee0-3fec-423b-984b-dfb4b949aedb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "available_pipelines = [pipeline for pipeline in  os.listdir(PATHS.pipelines) if pipeline.endswith(\".pkl\")]\n",
-    "img_pipelines = [pipeline for pipeline in available_pipelines if pipeline.startswith(\"img\")]\n",
-    "txt_pipelines = [pipeline for pipeline in available_pipelines if pipeline.startswith(\"txt\")]\n",
-    "print(img_pipelines)\n",
-    "print(txt_pipelines)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9490c117-ba73-481c-839e-a54275a8b524",
-   "metadata": {},
-   "source": [
-    "## TODO: mettre dans src "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3425acb-3247-4998-9176-9d11b29c0159",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def df_to_serie(df):\n",
-    "    assert len(df.columns) == 1\n",
-    "    return df[df.columns[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebf62b5b-d4bc-449a-ab75-b283f9c5d8bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(os.path.join(PATHS.pipelines, \"img_lgbm.pkl\"), \"rb\") as f:\n",
-    "    img_pipeline = pickle.load(f)\n",
-    "with open(os.path.join(PATHS.pipelines, \"txt_ml.pkl\"), \"rb\") as f:\n",
-    "    txt_pipeline = pickle.load(f)\n"
+    "del documents, data_sets, labels"
    ]
   },
   {
@@ -233,7 +143,7 @@
    "id": "a50ae38d-9ba1-4c1f-acfb-660683fc0e33",
    "metadata": {},
    "source": [
-    "## 4. Chargement des modèles"
+    "## 3. Chargement des modèles"
    ]
   },
   {
@@ -243,34 +153,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "available_models = [model for model in  os.listdir(PATHS.models) if model.endswith(\".pkl\")]\n",
-    "img_models = [model for model in available_models if model.startswith(\"img\")]\n",
-    "txt_models = [model for model in available_models if model.startswith(\"txt\")]\n",
-    "print(img_models)\n",
-    "print(txt_models)"
+    "from src.models.model_wrappers import ModelWrapperFactory, AGG_FN"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97617655-8c6d-4219-b196-98cbea6daecb",
+   "id": "0062d1af-c371-4b05-8655-1d85533d6e8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(PATHS.models, \"img_lgbm.pkl\"), \"rb\") as f:\n",
-    "    img_model = pickle.load(f)\n",
-    "with open(os.path.join(PATHS.models, \"txt_logistic_regression.pkl\"), \"rb\") as f:\n",
-    "    txt_model = pickle.load(f)"
+    "ModelWrapperFactory.get_registered()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc4cd3d-8c11-4c71-b963-3521de6caec3",
+   "id": "cb64f540-eba8-4c84-add0-f3ec2ccb6f37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_model, txt_model"
+    "txt_model = ModelWrapperFactory.load_existing('Text-based Logistic Regressor')\n",
+    "img_model = ModelWrapperFactory.load_existing('Image-based LGBM')"
    ]
   },
   {
@@ -296,8 +200,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline) \n",
-    "visual_classification_report(multimodal_voter, X_test, y_test, \"Averaging voter\", compare_with_components=True)"
+    "multimodal_voter = ModelWrapperFactory.make_mmo_voter_wrapper(\n",
+    "    name=\"Averaging Voter\",\n",
+    "    model_wrappers=[txt_model, img_model],\n",
+    "    agg_fn=AGG_FN.AVERAGE\n",
+    ")\n",
+    "multimodal_voter.visual_report()"
    ]
   },
   {
@@ -315,8 +223,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline, method = \"max\") \n",
-    "visual_classification_report(multimodal_voter, X_test, y_test, \"Max value voter\", compare_with_components=True)"
+    "multimodal_voter = ModelWrapperFactory.make_mmo_voter_wrapper(\n",
+    "    name=\"Max Voter\",\n",
+    "    model_wrappers=[txt_model, img_model],\n",
+    "    agg_fn=AGG_FN.MAX\n",
+    ")\n",
+    "multimodal_voter.visual_report()"
    ]
   },
   {
@@ -338,7 +250,12 @@
     "\n",
     "accuracies = []\n",
     "for alpha in tqdm(np.linspace(0,1, 101)):\n",
-    "    multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline, method=\"weighted\", weights = (alpha, 1-alpha))\n",
+    "    multimodal_voter = ModelWrapperFactory.make_mmo_voter_wrapper(\n",
+    "        name=\"Weighted Voter\",\n",
+    "        model_wrappers=[txt_model, img_model],\n",
+    "        agg_fn=AGG_FN.WEIGHTED,\n",
+    "        weights = [alpha, 1-alpha]\n",
+    "    )\n",
     "    accuracies.append([alpha, accuracy_score(y_val, multimodal_voter.predict(X_val))])"
    ]
   },
@@ -350,15 +267,15 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8,8))\n",
-    "plt.plot((0,0.49),(0.8421, 0.842), 'r--', lw=1)\n",
-    "plt.plot((0.49,0.49),(0.55, 0.842), 'r--', lw=1)\n",
+    "plt.plot((0,0.49),(0.8421, 0.846), 'r--', lw=1)\n",
+    "plt.plot((0.49,0.49),(0.55, 0.846), 'r--', lw=1)\n",
     "plt.plot(\n",
     "    tuple(r[0] for r in accuracies),\n",
     "    tuple(r[1] for r in accuracies)\n",
     ")\n",
     "\n",
     "plt.xticks(list(plt.xticks()[0]) + [0.49])\n",
-    "plt.yticks(list(plt.yticks()[0]) + [0.842])\n",
+    "plt.yticks(list(plt.yticks()[0]) + [0.846])\n",
     "\n",
     "# Colorer le tick x = 0.49 en rouge\n",
     "for label in plt.gca().get_xticklabels():\n",
@@ -367,7 +284,7 @@
     "\n",
     "# Colorer le tick y = 0.8421 en rouge\n",
     "for label in plt.gca().get_yticklabels():\n",
-    "    if label.get_text() == '0.842':\n",
+    "    if label.get_text() == '0.846':\n",
     "        label.set_color('red')\n",
     "plt.xlim(0, 1)\n",
     "plt.ylim(0.55, 0.87)\n",
@@ -393,12 +310,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "613c2c4f-b05f-4c16-8850-45d4276f033e",
+   "id": "b7c3193d-e537-4009-9510-71a0ed88b314",
    "metadata": {},
    "outputs": [],
    "source": [
-    "multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline, method=\"weighted\", weights = (0.49, 0.51))\n",
-    "visual_classification_report(multimodal_voter, X_test, y_test, \"0.49-weighted Voter\", compare_with_components=True)"
+    "alpha = 0.49\n",
+    "multimodal_voter = ModelWrapperFactory.make_mmo_voter_wrapper(\n",
+    "    name=\"0.49-Weighted Voter\",\n",
+    "    model_wrappers=[txt_model, img_model],\n",
+    "    agg_fn=AGG_FN.WEIGHTED,\n",
+    "    weights = [alpha, 1-alpha]\n",
+    ")\n",
+    "\n",
+    "multimodal_voter.visual_report()"
    ]
   },
   {
@@ -416,32 +340,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multimodal_voter = MultiModalClassWeightedVoter(img_model, img_pipeline, txt_model, txt_pipeline)\n",
-    "multimodal_voter.fit(X_val, y_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52c4eca9-20fd-43bc-bb73-7dab3cf7fbe2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visual_classification_report(multimodal_voter, X_test, y_test, \"Class-Weighted voter\", compare_with_comp@bonents=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "837f8315-14db-4561-b03f-1da40a981395",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max(txt_weights), min(txt_weights)\n",
-    "print(\" class | txt weight | img weight \")\n",
-    "print(\"-------+------------+------------\")\n",
-    "for c, (t, i) in enumerate(zip(txt_weights, img_weights)):\n",
-    "    print(f\"   {c:02d}  |    {t:.2f}    |    {i:.2f}\")"
+    "multimodal_voter = ModelWrapperFactory.make_mmo_voter_wrapper(\n",
+    "    name=\"Class-Weighted Voter\",\n",
+    "    model_wrappers=[txt_model, img_model],\n",
+    "    agg_fn=AGG_FN.CLASS_WEIGHTED,\n",
+    "    weights=[\n",
+    "        txt_model.performance_summary.precisions,\n",
+    "        img_model.performance_summary.precisions]\n",
+    ")\n",
+    "multimodal_voter.visual_report()"
    ]
   },
   {
@@ -451,8 +358,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt_weights = (multimodal_voter.txt_weights/multimodal_voter.weights_sum).flatten()\n",
-    "img_weights = (multimodal_voter.img_weights/multimodal_voter.weights_sum).flatten()\n",
+    "txt_weights = np.array(txt_model.performance_summary.precisions)\n",
+    "img_weights = np.array(img_model.performance_summary.precisions)\n",
+    "summed_weights = txt_weights + img_weights\n",
+    "txt_weights /= summed_weights\n",
+    "img_weights /= summed_weights\n",
     "\n",
     "indices = np.arange(len(txt_weights))\n",
     "\n",
@@ -475,7 +385,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e275c07-76b2-4627-bb64-dc2a4e60df9d",
+   "id": "837f8315-14db-4561-b03f-1da40a981395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\" class | txt weight | img weight \")\n",
+    "print(\"-------+------------+------------\")\n",
+    "for c, (t, i) in enumerate(zip(txt_weights, img_weights)):\n",
+    "    print(f\"   {c:02d}  |    {t:.2f}    |    {i:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34b86431-ff8e-4a38-a237-602763a3ef79",
    "metadata": {},
    "outputs": [],
    "source": []
