--- a/notebooks/7.2-mmo_autonomous.ipynb
+++ b/notebooks/7.2-mmo_autonomous.ipynb
@@ -60,9 +60,11 @@
     "from tqdm import tqdm\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-    "\n",
-    "from src.models.multimodal import MultiModalVoter, MultiModalClassWeightedVoter, MultiModalLogisticRegressor\n",
-    "from src.visualization.visualize import visual_classification_report"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from src.models.multimodal import MultiModalVoter, MultiModalClassWeightedVoter, MultiModalCompositeModel\n",
+    "from src.visualization.visualize import visual_classification_report\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from src.models.model_wrappers import ModelWrapperFactory"
    ]
   },
   {
@@ -80,74 +82,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_features = pd.read_parquet(os.path.join(PATHS.processed_data, 'df_txt_ocr1.parquet'))\n",
-    "text_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1a5840f-12a5-4c7d-bd31-8e1191c5b151",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_features = pd.read_parquet(os.path.join(PATHS.processed_data, \"df_img_features_flattened.parquet\"))\n",
-    "image_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be93acf6-dbd8-4c3d-b125-88d78e753be4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = text_features.join(image_features, how=\"inner\")\n",
-    "del image_features, text_features\n",
-    "features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23eb4c85-57b6-40af-ab93-02210642d303",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "documents = pd.read_parquet(PATHS.metadata / \"df_documents.parquet\")\n",
     "data_sets = pd.read_parquet(os.path.join(PATHS.metadata, \"df_data_sets.parquet\"))\n",
-    "labels = pd.read_parquet(os.path.join(PATHS.metadata, \"df_encoded_labels.parquet\"))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "2bd8390c-3906-4d44-9ce7-693d6dccd7cb",
-   "metadata": {},
-   "source": [
-    "## pour ne travailler que sur un échantillon :"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "50d52c28-8bcd-4420-bad2-a06332de29bc",
-   "metadata": {},
-   "source": [
-    "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_4k_3.parquet'))\n",
-    "features = features.join(sample, how='inner')\n",
-    "features.shape"
+    "labels = pd.read_parquet(os.path.join(PATHS.metadata, \"df_encoded_labels.parquet\"))\n",
+    "documents.shape, data_sets.shape, labels.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d481163a-41ba-4b54-84be-1d04a93cb8a5",
+   "id": "a489e996-aded-44ed-812f-3005e0956534",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# au cas où features soit incomplet\n",
-    "data_sets = data_sets.join(features[[]], how=\"inner\")\n",
-    "labels = labels.join(features[[]], how=\"inner\")\n",
-    "\n",
-    "features.shape, data_sets.shape, labels.shape"
+    "## pour ne travailler que sur un échantillon :\n",
+    "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_4k_3.parquet'))\n",
+    "documents = sample.join(documents)\n",
+    "data_sets = sample.join(data_sets)\n",
+    "labels = sample.join(labels)\n",
+    "documents.shape, data_sets.shape, labels.shape"
    ]
   },
   {
@@ -157,71 +110,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = features[data_sets.data_set == \"train\"]\n",
-    "y_train = labels[data_sets.data_set == \"train\"]\n",
+    "X_train = documents[data_sets.data_set == \"train\"].index\n",
+    "y_train = labels[data_sets.data_set == \"train\"].label\n",
     "\n",
-    "X_val = features[data_sets.data_set == \"val\"]\n",
-    "y_val = labels[data_sets.data_set == \"val\"]\n",
+    "X_val = documents[data_sets.data_set == \"val\"].index\n",
+    "y_val = labels[data_sets.data_set == \"val\"].label\n",
     "\n",
-    "X_test = features[data_sets.data_set == \"test\"]\n",
-    "y_test = labels[data_sets.data_set == \"test\"]\n",
-    "\n",
-    "del features, labels, data_sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b3a086f-60ba-4464-af69-f643af6b85b8",
-   "metadata": {},
-   "source": [
-    "## 3. Chargement des pipelines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eaddc94d-2f41-4ed9-8112-c3f40cabe819",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "available_pipelines = [pipeline for pipeline in  os.listdir(PATHS.pipelines) if pipeline.endswith(\".pkl\")]\n",
-    "img_pipelines = [pipeline for pipeline in available_pipelines if pipeline.startswith(\"img\")]\n",
-    "txt_pipelines = [pipeline for pipeline in available_pipelines if pipeline.startswith(\"txt\")]\n",
-    "print(img_pipelines)\n",
-    "print(txt_pipelines)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9490c117-ba73-481c-839e-a54275a8b524",
-   "metadata": {},
-   "source": [
-    "## TODO: mettre dans src "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3425acb-3247-4998-9176-9d11b29c0159",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def df_to_serie(df):\n",
-    "    assert len(df.columns) == 1\n",
-    "    return df[df.columns[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebf62b5b-d4bc-449a-ab75-b283f9c5d8bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(os.path.join(PATHS.pipelines, \"img_lgbm.pkl\"), \"rb\") as f:\n",
-    "    img_pipeline = pickle.load(f)\n",
-    "with open(os.path.join(PATHS.pipelines, \"txt_ml.pkl\"), \"rb\") as f:\n",
-    "    txt_pipeline = pickle.load(f)\n"
+    "X_test = documents[data_sets.data_set == \"test\"].index\n",
+    "y_test = labels[data_sets.data_set == \"test\"].label"
    ]
   },
   {
@@ -229,44 +125,31 @@
    "id": "a50ae38d-9ba1-4c1f-acfb-660683fc0e33",
    "metadata": {},
    "source": [
-    "## 4. Chargement des modèles"
+    "## 3. Création du wrapper"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d55f9417-fd58-4f5e-8589-ef22dc65985e",
+   "id": "d5e228ce-8ccc-420b-841a-21c4ff70d34b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "available_models = [model for model in  os.listdir(PATHS.models) if model.endswith(\".pkl\")]\n",
-    "img_models = [model for model in available_models if model.startswith(\"img\")]\n",
-    "txt_models = [model for model in available_models if model.startswith(\"txt\")]\n",
-    "print(img_models)\n",
-    "print(txt_models)"
+    "ModelWrapperFactory.get_registered()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97617655-8c6d-4219-b196-98cbea6daecb",
+   "id": "5275e79c-331a-4e3d-a2f1-8e8eae830ca8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(PATHS.models, \"img_lgbm.pkl\"), \"rb\") as f:\n",
-    "    img_model = pickle.load(f)\n",
-    "with open(os.path.join(PATHS.models, \"txt_logistic_regression.pkl\"), \"rb\") as f:\n",
-    "    txt_model = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfc4cd3d-8c11-4c71-b963-3521de6caec3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_model, txt_model"
+    "txt_model = ModelWrapperFactory.load_existing('Text-based Logistic Regressor')\n",
+    "img_model = ModelWrapperFactory.load_existing('Image-based LGBM')\n",
+    "model_wrappers = [txt_model, img_model]\n",
+    "clf = LogisticRegression()\n",
+    "model = MultiModalCompositeModel(model_wrappers, clf)"
    ]
   },
   {
@@ -274,18 +157,40 @@
    "id": "664020b0-a4d7-447e-a406-f332ab24ffdd",
    "metadata": {},
    "source": [
-    "## 5. Regression logistique"
+    "## 4. Apprentissage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac611e8-7941-4ca0-a469-10dcf60ca54e",
+   "id": "d8493376-3987-43b3-ada4-4d782d69f7ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MultiModalLogisticRegressor(img_pipeline, img_model, txt_pipeline, txt_model)\n",
-    "model.fit(X_train, y_train)"
+    "start_time = time.time()\n",
+    "model.fit(X_train, y_train)\n",
+    "end_time = time.time()\n",
+    "elapsed = end_time - start_time\n",
+    "print(f\" Temps d'exécution total : {elapsed / 60:.2f} minutes ({elapsed:.1f} secondes)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bed87b1-b979-4095-9202-72eb97d891c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = PATHS.models / \"mmo_comp_logreg_on_img-lgbm+txt-logreg.joblib\"\n",
+    "model.save(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ac08e37-15ad-4da9-b775-caa16b021900",
+   "metadata": {},
+   "source": [
+    "## 5. Evaluation"
    ]
   },
   {
@@ -295,84 +200,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visual_classification_report(model, X_test, y_test, \"Logistic Regressor\", compare_with_components=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e86a17cc-8f72-4a47-ba96-80de7a0201f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.score(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e275c07-76b2-4627-bb64-dc2a4e60df9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "857ae175-e473-4902-bef6-897987f38e39",
-   "metadata": {},
-   "source": [
-    "## 6. Impact de la taille du jeu de données"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a5154b5-b304-4b4c-9756-388171a0c088",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_docs = X_train.shape[0]\n",
-    "scores = []\n",
-    "n_documents = []\n",
-    "for i in range(10):\n",
-    "    print(i, n_docs, '...', end='')\n",
-    "    model = MultiModalLogisticRegressor(img_pipeline, img_model, txt_pipeline, txt_model)\n",
-    "    print(' created ...', end='')\n",
-    "    model.fit(X_train, y_train)\n",
-    "    print(' fitted ...', end='')\n",
-    "    n_documents.append(n_docs)\n",
-    "    scores.append(model.score(X_test, y_test))\n",
-    "    print(' evaluated')\n",
-    "    n_docs //= 2\n",
-    "    X_train = X_train[:n_docs]\n",
-    "    y_train = y_train[:n_docs]\n",
-    "    X_test = X_test[:n_docs]\n",
-    "    y_test = y_test[:n_docs]\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0d56065-82eb-4dc1-9637-317177b3f4d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8,8))\n",
-    "plt.plot(n_documents, scores)\n",
-    "plt.xlabel(\"Nombre de documents\")\n",
-    "plt.ylabel(\"Score MMO Logistic Regressor\")\n",
-    "plt.title(\"Score obtenu en fonction du volume de données utilisées\");\n",
+    "name = \"Multimodal Composite LogReg on img-LGBM + txt-LogReg\"\n",
+    "path = PATHS.models / \"mmo_comp_logreg_on_img-lgbm+txt-logreg.joblib\"\n",
     "\n",
-    "           "
+    "wrapper = ModelWrapperFactory.make_mmo_composite_wrapper(name, path)\n",
+    "wrapper.visual_report()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d9ec64d-3545-414c-8722-fa9b60cf9a13",
+   "cell_type": "raw",
+   "id": "1f6f28ad-66f6-4cf3-8aa3-b7bfe211a5f6",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
