--- a/notebooks/7.3-mmo_CLIP+ML.ipynb
+++ b/notebooks/7.3-mmo_CLIP+ML.ipynb
@@ -14,15 +14,7 @@
    "metadata": {},
    "source": [
     "## README\n",
-    "Ce notebook permet la création et l'évaluation d'un modèle basé sur l'architecture existatne CLIP.\n",
-    "\n",
-    "# TODO\n",
-    "\n",
-    "Le chapitre 1 prépare les données nécessaires\n",
-    "\n",
-    "Le chapitre 2 crée et évalue un modèle de voting simple, par moyennage des prédictions de 2 modèles (1 images et 1 texte)\n",
-    "\n",
-    "Le chapitre 3 propose une version avancée, avec pondérations, apprises ou non, des résultats des deux modèles utilisés"
+    "Ce notebook permet la création et l'évaluation d'un modèle basé sur l'architecture existatne CLIP."
    ]
   },
   {
@@ -60,6 +52,7 @@
     "import os\n",
     "import time\n",
     "import pickle\n",
+    "import joblib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -67,8 +60,8 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "\n",
-    "from src.models.multimodal import MultiModalVoter, MultiModalClassWeightedVoter, MultiModalLogisticRegressor\n",
-    "from src.visualization.visualize import visual_classification_report"
+    "from src.models.multimodal_clip import MultiModalCLIPBasedClassifier\n",
+    "from src.models.model_wrappers import ModelWrapperFactory"
    ]
   },
   {
@@ -82,95 +75,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78566542-9924-4aac-9d25-a15d13d65327",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_features = pd.read_parquet(os.path.join(PATHS.processed_data, 'df_txt_ocr1.parquet'))\n",
-    "text_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5927af13-7788-4d88-b009-03eebc098b24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dans src/utils?\n",
-    "def get_converted_image_path(tif_path):\n",
-    "    return os.path.join(\n",
-    "        PATHS.converted_images,\n",
-    "        tif_path.replace('raw/RVL-CDIP/images/', '').replace('.tif', '.jpg')\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1a5840f-12a5-4c7d-bd31-8e1191c5b151",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_features = pd.read_parquet(os.path.join(PATHS.metadata,'df_filepaths.parquet'))[['rvl_image_path']]\n",
-    "image_features[\"filepath\"] = image_features.rvl_image_path.apply(get_converted_image_path)\n",
-    "image_features.drop(columns=\"rvl_image_path\", inplace=True)\n",
-    "image_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be93acf6-dbd8-4c3d-b125-88d78e753be4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = text_features.join(image_features, how=\"inner\")\n",
-    "del image_features, text_features\n",
-    "features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "23eb4c85-57b6-40af-ab93-02210642d303",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sets = pd.read_parquet(os.path.join(PATHS.metadata, \"df_data_sets.parquet\"))\n",
-    "labels = pd.read_parquet(os.path.join(PATHS.metadata, \"df_encoded_labels.parquet\"))"
+    "documents = pd.read_parquet(PATHS.metadata / \"df_data_sets.parquet\")\n",
+    "data_sets = pd.read_parquet(PATHS.metadata / \"df_data_sets.parquet\")\n",
+    "labels = pd.read_parquet(PATHS.metadata / \"df_encoded_labels.parquet\")"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "10849026-1c94-4832-888e-0057012b1132",
+   "id": "266b98af-383d-40e9-99bb-c263794d2b8f",
    "metadata": {},
    "source": [
-    "## pour ne travailler que sur un échantillon :"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "f6e66607-111c-4159-a20e-75c98ae66118",
-   "metadata": {},
-   "source": [
-    "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_1k_3.parquet'))\n",
-    "features = features.join(sample, how='inner')\n",
-    "features.shape"
+    "# pour ne travailler que sur un échantillon\n",
+    "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_4k_2.parquet'))\n",
+    "documents = sample.join(documents)\n",
+    "labels = sample.join(labels)\n",
+    "data_sets = sample.join(data_sets)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d481163a-41ba-4b54-84be-1d04a93cb8a5",
+   "id": "79f65ef1-1be3-48a2-97f3-2e182c26dbb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# au cas où features soit incomplet\n",
-    "data_sets = data_sets.join(features[[]], how=\"inner\")\n",
-    "labels = labels.join(features[[]], how=\"inner\")\n",
-    "\n",
-    "features.shape, data_sets.shape, labels.shape"
+    "documents.shape, data_sets.shape, labels.shape"
    ]
   },
   {
@@ -180,24 +113,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = features[data_sets.data_set == \"train\"]\n",
-    "y_train = labels[data_sets.data_set == \"train\"]\n",
+    "X_train = documents[data_sets.data_set == \"train\"].index\n",
+    "y_train = labels[data_sets.data_set == \"train\"].label\n",
     "\n",
-    "X_val = features[data_sets.data_set == \"val\"]\n",
-    "y_val = labels[data_sets.data_set == \"val\"]\n",
+    "X_val = documents[data_sets.data_set == \"val\"].index\n",
+    "y_val = labels[data_sets.data_set == \"val\"].label\n",
     "\n",
-    "X_test = features[data_sets.data_set == \"test\"]\n",
-    "y_test = labels[data_sets.data_set == \"test\"]"
+    "X_test = documents[data_sets.data_set == \"test\"].index\n",
+    "y_test = labels[data_sets.data_set == \"test\"].label"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17388ba2-7aaf-41d3-a706-fbb05c4c94c5",
+   "cell_type": "raw",
+   "id": "d788ba5f-991d-408d-8fa0-f3062dc8c6a4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from src.models.multimodal_clip import MultimodalCLIPBasedClassifier"
+    "# CALCUL DES EMBEDDINGS\n",
+    "# ETAPE TRES LONGUE LA PREMIERE FOIS (environ 8H00)\n",
+    "# Une fois calculés, les embeddings seront sauvegardées et rechargés à chaque fois que requis.\n",
+    "t0 = time.time()\n",
+    "embeddings = clf.get_clip_embeddings(features)\n",
+    "print(f\"Terminé en {time.time()-t0:.2f} secondes\")\n",
+    "model.save_embeddings()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0de3b1-b50c-4c60-b55f-99ac32f12e89",
+   "metadata": {},
+   "source": [
+    "# 3. Apprentissage"
    ]
   },
   {
@@ -207,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = MultimodalCLIPBasedClassifier()"
+    "model = MultiModalCLIPBasedClassifier()"
    ]
   },
   {
@@ -225,50 +170,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eed037e1-e41a-40e6-9b35-8085d6d66e52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings = pd.read_parquet(os.path.join(PATHS.processed_data, 'df_clip_embeddings.parquet'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "910c1edd-e9ba-4006-9db4-1046a7b76562",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "02064da8-d27b-4f37-b77b-3722fb3e9c8a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# environ 3'30'' sur 400k images\n",
     "t0 = time.time()\n",
-    "clf.fit(X_train, y_train, embeddings=X_train[[]].join(embeddings))\n",
+    "model.fit(X_train, y_train)\n",
     "print(f\"Terminé en {time.time()-t0:.2f} secondes\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc10e47-6266-4565-94d5-8154b4529bef",
+   "id": "f5b33715-7c6a-4fed-baf7-1f75953343a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.visualization.visualize import visual_classification_report\n",
-    "visual_classification_report(clf, X_test, y_test, \"CLIP-based Logistic Regressor Model\")"
+    "path = PATHS.models / \"mmo_clip_logistic_regressor.joblib\"\n",
+    "model.save(path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0528904-f32f-4cf1-97bd-9c18737e9e6b",
+   "id": "0e7dc46d-7aaf-4af9-8b3f-25eba67e0b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"CLIP-based Logistic Regressor\"\n",
+    "wrapper = ModelWrapperFactory.make_mmo_clip_wrapper(name, path)\n",
+    "wrapper.visual_report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04337cd5-b78e-45e5-82c6-09068b5f49c8",
    "metadata": {},
    "outputs": [],
    "source": []
