CLIP comme singleton

--- a/notebooks/7.3-mmo_CLIP+ML.ipynb
+++ b/notebooks/7.3-mmo_CLIP+ML.ipynb
@@ -124,28 +124,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d788ba5f-991d-408d-8fa0-f3062dc8c6a4",
-   "metadata": {},
-   "source": [
-    "# CALCUL DES EMBEDDINGS\n",
-    "# ETAPE TRES LONGUE LA PREMIERE FOIS (environ 8H00)\n",
-    "# Une fois calculés, les embeddings seront sauvegardées et rechargés à chaque fois que requis.\n",
-    "t0 = time.time()\n",
-    "embeddings = clf.get_clip_embeddings(features)\n",
-    "print(f\"Terminé en {time.time()-t0:.2f} secondes\")\n",
-    "model.save_embeddings()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee0de3b1-b50c-4c60-b55f-99ac32f12e89",
-   "metadata": {},
-   "source": [
-    "# 3. Apprentissage"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "268b52ee-7d8f-480d-a0b1-44c9296bf832",
@@ -157,14 +135,24 @@
   },
   {
    "cell_type": "raw",
-   "id": "9319e707-c9c8-425c-b8aa-c9bcc685a5db",
+   "id": "d788ba5f-991d-408d-8fa0-f3062dc8c6a4",
    "metadata": {},
    "source": [
+    "# CALCUL PREALABLE DES EMBEDDINGS\n",
+    "# ETAPE TRES LONGUE LA PREMIERE FOIS (environ 8H00)\n",
+    "# Une fois calculés, les embeddings seront sauvegardées et rechargés à chaque fois que requis.\n",
     "t0 = time.time()\n",
-    "embeddings = clf.get_clip_embeddings(features)\n",
+    "embeddings = model.clip.get_embeddings(documents.index)\n",
     "print(f\"Terminé en {time.time()-t0:.2f} secondes\")\n",
-    "embeddings.to_parquet(os.path.join(PATHS.processed_data, 'df_clip_embeddings.parquet'))\n",
-    "# ENVIRON 8H10 DE CALCUL"
+    "model.clip.save_embeddings()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0de3b1-b50c-4c60-b55f-99ac32f12e89",
+   "metadata": {},
+   "source": [
+    "# 3. Apprentissage"
    ]
   },
   {
